Loads properties from build.properties.
The build file now allows loading of Ant properties from a file
build.properties in the same directory as the build file.  This allows
overriding of parameters like max memory without modification of the build
file.

Also, any properties in build.properties whose names begin "run." will be
passed to GATE by the run target, after having the leading "run." stripped off.
This allows passing of arbitrary system properties to GATE.  E.g.

run.java.io.tmpdir=${user.home}/tmp

would set java.io.tmpdir to {user's home dir}/tmp when running the GUI.